--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -6,6 +6,7 @@
   padding: 0 1rem;
   height: 3rem;
   background-color: var(--background-color-darker);
+  border-bottom: 1px solid (--border-color);
 }
 
 .navbar-container .logo {
@@ -19,17 +20,10 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-}
-
-.navbar-container .nav-links span {
-  font-size: 1rem;
-  margin: 0 0.5rem;
-  font-weight: 700;
-  color: var(--text-color);
+  width: 20rem;
 }
 
 .navbar-container .nav-links .nav-link {
-  margin: 0 0.5rem;
   font-size: 1rem;
   font-weight: 700;
   color: var(--text-color);
@@ -68,14 +62,7 @@
   background-color: var(--text-color-hover);
 }
 
-.navbar-container .nav-links button {
-  margin: 0 0.5rem;
+.theme-button {
   background-color: transparent;
   border: none;
-  outline: none;
-  cursor: pointer;
-}
-
-.navbar-container .nav-links button svg g path {
-  stroke: var(--text-color);
 }
