--- a/styles/form.module.css
+++ b/styles/form.module.css
@@ -57,17 +57,25 @@
 }
 
 .alert {
-  padding: 0.5rem 2rem;
+  /* padding: 0.5rem 2rem; */
   border-radius: 0.25em;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
+.alert-text {
+  color: inherit;
+  margin: 0.5rem 1.25rem;
+}
+
 .alert-button {
   background-color: transparent;
-  transform: translateX(1em);
-  padding: 0;
+  /* transform: translateX(1em); */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.4em;
   border: none;
   border-radius: 0.25rem;
   cursor: pointer;
