--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,13 +3,12 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -19,7 +18,7 @@ a {
   height: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -27,4 +26,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
