--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,3 +41,20 @@ body {
     opacity: 0;
   }
 }
+
+
+/* customize the scrollbar */
+::-webkit-scrollbar {
+  width: 7px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: #555555;
+  border-radius: 4px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
