--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
-:root{
-  --main-background-color: #fafafa;
+* {
+  box-sizing: border-box;
 }
 
 html,
@@ -8,54 +8,12 @@ body {
   padding: 0;
   overflow-x: hidden;
   margin: 0;
-  background-color: var(--main-background-color);
 }
 
-[data-theme="dark"] {
-  --main-background-color: #292929;
-}
-[data-theme="light"] {
-  --main-background-color: #fff;
-}
-
-#container {
-  background-color: var(--main-background-color);
-}
-
-/* a {
-  color: inherit;
-  text-decoration: none;
-} */
-
-* {
-  box-sizing: border-box;
-}
 
 #__next {
-  height: 100%;
+  height: 100vh;
   overflow-x: hidden;
-}
-
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-} */
-
-.fadeout {
-  animation: fadeout 0.3s ease-in-out;
-}
-@keyframes fadeout {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
 }
 
 
