--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,10 @@ body {
   margin: 0;
 }
 
+/* Hide the spinner */
+#nprogress .spinner {
+  display: none;
+}
 
 #__next {
   height: 100vh;
@@ -31,4 +35,3 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-
