--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,20 @@ body {
   margin: 0;
 }
 
+#background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -2;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.1;
+  background-image: url('/gray.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
 #background-container {
   position: fixed;
   top: 0;
